# gemini-cli-project

./: .dockerignore  .env  .env.example  DOCKER_SETUP.md  Dockerfile  Makefile  debug_ocr_structure.py  docker-compose.yml  package-lock.json  package.json  requirements.txt  test_conversation_data.py  test_debug_routing.py  test_fixed_routing.py  test_ocr_routing_debug.py  test_pdf_clause_selection.py  test_routing_logic.py  test_simple_routing.py  text.txt
scripts/: setup.sh
src/legal-document-simplifier/: .env.example  pyproject.toml
src/legal-document-simplifier/.github/workflows/: ci.yml
src/legal-document-simplifier/docker/: docker-compose.yml  fastapi.Dockerfile  frontend.Dockerfile
src/legal-document-simplifier/docs/: openapi.json
src/legal-document-simplifier/scripts/: deploy.sh  generate_openapi.py
src/legal-document-simplifier/src/: requirements-dev.txt
src/legal-document-simplifier/src/backend/: config.py  main.py
src/legal-document-simplifier/src/backend/models/: clauses.py
src/legal-document-simplifier/src/backend/routers/: analyze.py  chat.py  upload.py
src/legal-document-simplifier/src/backend/schemas/: analysis.py
src/legal-document-simplifier/src/backend/services/: clause.py  embedding.py  ocr.py  rag.py  risk.py  vertex_recommend.py
src/legal-document-simplifier/src/backend/tests/: conftest.py  test_embedding.py  test_embedding_complete.py  test_embedding_mocks.py  test_embedding_performance.py  test_remote_api.py  test_vertex_ai.py
src/legal-document-simplifier/src/frontend/: package-lock.json  package.json  test.html  tsconfig.app.json
src/legal-document-simplifier/src/frontend/src/: App.tsx
src/legal-document-simplifier/src/frontend/templates/: base.html  index.html
src/legal-document-simplifier/src/legal_document_simplifier.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/legal-document-simplifier/tests/: test_api.py
(+40 files in other folders)
