[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legal-document-simplifier"
version = "0.1.0"
description = "Legal Document Simplifier Backend"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pymilvus>=2.3.0",
    "psycopg2-binary>=2.9.7",
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "pillow>=10.0.0",
    "aiofiles>=23.2.1",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["src"]
